unpackaged/main/default/objects/adobesign__PKG_Env_Settings__c/adobesign__PKG_Env_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Adobe Sign CNTRCTBLD Env Settings</label>
</CustomObject>