unpackaged/main/default/objects/adobesign__PKG_Env_Settings__c/fields/adobesign__Config_API_URL__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Config_API_URL__c</fullName>
    <label>Config API URL</label>
    <type>Url</type>
</CustomField>