unpackaged/main/default/objects/adobesign__PKG_Env_Settings__c/fields/adobesign__Environment_Name__c.field-meta.xml
<CustomField>
    <fullName>adobesign__Environment_Name__c</fullName>
    <description>Set to Production, Stage, or Preview. Leave blank to stay on production.</description>
    <inlineHelpText>Set to Production, Stage, or Preview. Leave blank to stay on production.</inlineHelpText>
    <label>Environment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>